--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,11 @@ Icon
 .Trashes
 
 *.metadata
+
+*.markers
+Bryans Java Workspace/.metadata/.plugins/org.eclipse.core.resources/.projects/Assignment 5.1/.markers
+Bryans Java Workspace/.metadata/.plugins/
+Bryans Java Workspace/.metadata/.plugins/org.eclipse.core.resources
+Bryans Java Workspace/.metadata/.plugins/org.eclipse.core.resources/.projects/
+Bryans Java Workspace/.metadata/.plugins/org.eclipse.core.resources/.projects/Assignment 5.1
+Bryans Java Workspace/.metadata/
