trying to fix gitignore with /** syntax

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ Icon
 *.metadata
 
 *.markers
+Bryans Java Workspace/.metadata/**
 Bryans Java Workspace/.metadata/.plugins/org.eclipse.core.resources/.projects/Assignment 5.1/.markers
 Bryans Java Workspace/.metadata/.plugins/
 Bryans Java Workspace/.metadata/.plugins/org.eclipse.core.resources
